[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jax-sysid"
version = "1.0.1"
authors = [
    { name = "Alberto Bemporad", email = "alberto.bemporad@imtlucca.it" }
]
description = "A Python package for linear and nonlinear system identification and nonlinear regression using Jax."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "jax",
    "jaxopt",
    "tqdm",
    "matplotlib",
    "pmlb",
    "joblib",
    "diffrax"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
keywords = [
    "system identification",
    "subspace identification",
    "nonlinear regression"
]

[project.urls]
homepage = "https://github.com/bemporad/jax-sysid"