[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jax-sysid"
version = "1.0.2"
authors = [
    { name = "Alberto Bemporad", email = "alberto.bemporad@imtlucca.it" }
]
description = "A Python package for linear and nonlinear system identification and nonlinear regression using Jax."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "jax<=0.4.31", # As of 2024-01-03, jax > 0.4.31 has a much slower jax.lax.scan
    "jaxopt",
    "tqdm",
    "matplotlib",
    "joblib",
    "equinox<=0.11.10", # As of 2024-01-03, a later version of equinox (required by diffrax) requires jax > 0.4.31
    "diffrax<=0.6.1", # As of 2024-01-03, a later version of diffrax requires jax > 0.4.31
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
keywords = [
    "system identification",
    "subspace identification",
    "nonlinear regression"
]

[project.urls]
homepage = "https://github.com/bemporad/jax-sysid"