[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jax-sysid"
version = "1.0.11"
authors = [
    { name = "Alberto Bemporad", email = "alberto.bemporad@imtlucca.it" }
]
description = "A Python package for linear and nonlinear system identification and nonlinear regression using Jax."
readme = "README.md"
requires-python = ">=3.9,<3.13" # As of 2024-01-03, requiring jax <= 0.4.31 is not compatible with Python 3.13
dependencies = [
    "numpy",
    "scipy<=1.14.1", # As of version 1.15.0, the iprint option in scipy.optimize (L-BFGS-B) is deprecated
    "jax<=0.4.31", # As of 2024-01-03, jax > 0.4.31 has a much slower jax.lax.scan
    "jaxopt",
    "flax<=0.10.4",
    "tqdm",
    "matplotlib",
    "joblib",
    "equinox<=0.11.10", # As of 2024-01-03, a later version of equinox (required by diffrax) requires jax > 0.4.31
    "diffrax<=0.6.1", # As of 2024-01-03, a later version of diffrax requires jax > 0.4.31
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
keywords = [
    "system identification",
    "subspace identification",
    "nonlinear regression"
]

[project.urls]
homepage = "https://github.com/bemporad/jax-sysid"